--- a/PWARClientLauncher/MainWindow.xaml
+++ b/PWARClientLauncher/MainWindow.xaml
@@ -7,32 +7,37 @@
         mc:Ignorable="d"
         Title="ProjectWAR Client Launcher" Height="450" Width="580" FontSize="20" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" WindowState="Normal" Icon="/WAR.ico" BorderBrush="#FF120505" Cursor="Arrow" WindowStyle="ToolWindow">
     <Window.Background>
-        <ImageBrush ImageSource="/LauncherTitleImage.jpg"/>
+        <ImageBrush ImageSource="/LauncherTitleImage.jpg" />
     </Window.Background>
     <Grid>
         <Grid.RowDefinitions>
-
         </Grid.RowDefinitions>
-        <Label x:Name="Login" Content="Login :" HorizontalAlignment="Left" Margin="39,329,0,0" Foreground="#FFB9C5A6" Width="83" FontFamily="Calisto MT" FontSize="24" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_login" HorizontalAlignment="Left" Margin="127,333,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="105" TextChanged="textBox_TextChanged" Background="{x:Null}" Height="29" Foreground="#FFE80B0B" SelectionBrush="#FFE80B0B" RenderTransformOrigin="0.483,0.346">
+        <Label x:Name="Login" Content="Login :" HorizontalAlignment="Left" Margin="39,329,0,0" Foreground="#FFB9C5A6" Width="83" FontFamily="Calisto MT" FontSize="24" VerticalAlignment="Top" />
+        <TextBox x:Name="TextBox_login" HorizontalAlignment="Left" Margin="127,333,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="105" TextChanged="TextBox_TextChanged" Background="{x:Null}" Height="29" Foreground="#FFE80B0B" SelectionBrush="#FFE80B0B" RenderTransformOrigin="0.483,0.346">
             <TextBox.BorderBrush>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black"/>
-                    <GradientStop Color="#FFD61D1D" Offset="1"/>
+                    <GradientStop Color="Black" />
+                    <GradientStop Color="#FFD61D1D" Offset="1" />
                 </LinearGradientBrush>
             </TextBox.BorderBrush>
         </TextBox>
-        <Label x:Name="Password" Content="Password :" HorizontalAlignment="Left" Margin="232,329,0,0" Foreground="#FFB9C5A6" Width="120" FontFamily="Calisto MT" FontSize="24" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="passwordBox_password" HorizontalAlignment="Left" Margin="352,333,0,0" VerticalAlignment="Top" Width="105" Background="{x:Null}" Height="29" Foreground="#FFE80B0B" SelectionBrush="#FFE80B0B" RenderTransformOrigin="0.483,0.346">
+        <Label x:Name="Password" Content="Password :" HorizontalAlignment="Left" Margin="232,329,0,0" Foreground="#FFB9C5A6" Width="120" FontFamily="Calisto MT" FontSize="24" VerticalAlignment="Top" />
+        <PasswordBox x:Name="PasswordBox_password" HorizontalAlignment="Left" Margin="352,333,0,0" VerticalAlignment="Top" Width="105" Background="{x:Null}" Height="29" Foreground="#FFE80B0B" SelectionBrush="#FFE80B0B" RenderTransformOrigin="0.483,0.346">
             <PasswordBox.BorderBrush>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black"/>
-                    <GradientStop Color="#FFD61D1D" Offset="1"/>
+                    <GradientStop Color="Black" />
+                    <GradientStop Color="#FFD61D1D" Offset="1" />
                 </LinearGradientBrush>
             </PasswordBox.BorderBrush>
         </PasswordBox>
-        <Button x:Name="Button_Start" Content="Start" HorizontalAlignment="Left" Margin="471,321,0,0" VerticalAlignment="Top" Height="53" Width="86" Foreground="#FF9D0909" Background="{x:Null}" BorderBrush="#FFE20D0D" FontFamily="Calisto MT" FontSize="24" Cursor="Arrow"/>
-        <Button x:Name="Button_CreateAccount" Content="CREATE ACCOUNT" HorizontalAlignment="Left" Margin="352,10,0,0" VerticalAlignment="Top" Width="205" Background="{x:Null}" Foreground="#FF9D0909" FontFamily="Calisto MT" FontSize="20" BorderBrush="#FFE20D0D" Click="Button_CreateAccount_Click"/>
-
+        <Button x:Name="Button_Start" Content="Start" HorizontalAlignment="Left" Margin="471,321,0,0" VerticalAlignment="Top" Height="53" Width="86" Foreground="#FF9D0909" Background="{x:Null}" BorderBrush="#FFE20D0D" FontFamily="Calisto MT" FontSize="24" Cursor="Arrow" />
+        <Button x:Name="Button_CreateAccount" Content="CREATE ACCOUNT" HorizontalAlignment="Left" Margin="352,10,0,0" VerticalAlignment="Top" Width="205" Background="{x:Null}" Foreground="#FF9D0909" FontFamily="Calisto MT" FontSize="20" BorderBrush="#FFE20D0D" Click="Button_CreateAccount_Click" />
+        <Frame x:Name="MainFrame"
+               NavigationUIVisibility="Hidden"
+               VerticalAlignment="Stretch"
+               HorizontalAlignment="Stretch"
+               Grid.Row="1"
+               Grid.ColumnSpan="3" Navigated="MainFrame_Navigated">
+        </Frame>
     </Grid>
 </Window>
